# ML6xGDGKUL_AIAccelerate2025

./: .gitignore  README.md  evaluate.py  evaluation_results_20251029_141123.json  evaluation_results_20251029_144233.json  evaluation_results_20251029_150705.json  evaluation_results_20251029_154335.json  evaluation_results_20251029_155046.json  pyproject.toml  requirements.txt
.cache/: web_search.json
benchmark/: train.json
my_agent/: .local_env  agent.py
my_agent/tools/: __init__.py  calculator.py  code_reasoner.py  date_time.py  file_extract.py  grid_extractor.py  image_handling.py  information_extractor.py  read_files.py  string_reasoner.py  video_handling.py  web_search.py
utils/: server.py
