[project]
name = "GDG-Hackathon-ML6-Agent"
version = "0.1.0"
description = "This repository holds the scaffolding and dummy agent for the GDGxML6 Hackathon."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-adk",
    "colorama>=0.4.6",
    "pyfiglet>=1.0.4",
    "tavily-python>=0.5.0",
    "pillow",
    "python-dotenv",
    "pydantic>=2",
    "google-genai>=0.3.0",
]
